--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,5 +5,10 @@ jobs:
       - image: cirrusci/flutter
     steps:
       - checkout
+      - flutter/install_sdk_and_pub:
+          version: 3.10.1
+      - run: echo "Clean"
       - run: flutter doctor
+      - run: flutter clean
+      - run: flutter pub get
       - run: flutter build apk --release
