--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - checkout
       - flutter/install_sdk_and_pub:
-          version: 3.10.1
+          flutter_version: 3.10.1
       - run: echo "Clean"
       - run: flutter doctor
       - run: flutter clean
