--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
       - checkout
       - flutter/install_sdk_and_pub:
           flutter_version: 3.10.1
+          app-dir: ./app
       - run: echo "Clean"
       - run: flutter doctor
       - run: flutter clean
