--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,3 +16,5 @@ jobs:
       - run: flutter clean
       - run: flutter pub get
       - run: flutter build apk --release --split-per-abi --no-tree-shake-icons
+      - store_artifacts:
+         path: build/app/outputs/
